--- a/package.json
+++ b/package.json
@@ -16,12 +16,24 @@
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/localize": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-icons": "^0.4.3",
+    "@progress/kendo-angular-indicators": "^1.0.0",
+    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-layout": "^6.1.5",
+    "@progress/kendo-angular-navigation": "^1.0.0",
+    "@progress/kendo-angular-progressbar": "^2.0.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "latest",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "@progress/kendo-svg-icons": "^0.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.8",
