adding the official Angular library for Firebase

--- a/angular.json
+++ b/angular.json
@@ -127,6 +127,10 @@
               "devServerTarget": "petaid:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
