--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
-    "@progress/kendo-angular-buttons": "^6.1.2",
+    "@progress/kendo-angular-buttons": "^6.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dialog": "^5.0.1",
     "@progress/kendo-angular-icons": "^0.4.3",
     "@progress/kendo-angular-indicators": "^1.0.0",
+    "@progress/kendo-angular-inputs": "^7.2.1",
     "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-label": "^3.0.3",
     "@progress/kendo-angular-layout": "^6.1.5",
     "@progress/kendo-angular-navigation": "^1.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
     "@progress/kendo-angular-progressbar": "^2.0.0",
+    "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^0.1.2",
     "@progress/kendo-theme-default": "latest",
