--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               {
                 "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-              },
+              },              
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
