--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.0",
     "@progress/kendo-angular-layout": "^6.1.5",
+    "@progress/kendo-angular-menu": "^3.0.2",
     "@progress/kendo-angular-navigation": "^1.0.0",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
