exit login popup when click outside the popup

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@progress/kendo-drawing": "^1.0.0",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^0.1.2",
-    "@progress/kendo-theme-default": "latest",
+    "@progress/kendo-theme-bootstrap": "^4.35.1",
+    "@progress/kendo-theme-default": "^4.38.1",
     "bootstrap": "^5.0.1",
     "firebase": "^8.6.1",
     "rxjs": "~6.5.5",
